--- a/cartoon2.html
+++ b/cartoon2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartoon</title>
-  <link rel="stylesheet" href="./static/styles/cartoon2.css?v=wdygd16n" />
+  <link rel="stylesheet" href="./static/styles/cartoon2.css?v=sjf9h9sx" />
 </head>
 
 <body>
