--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
-  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
-  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
-  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=sjf9h9sx">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=sjf9h9sx">
+  <link rel="stylesheet" href="../static/styles/style.css?v=sjf9h9sx">
+  <script src="../static/js/jquery-3.7.0.min.js?v=sjf9h9sx"></script>
+  <script src="../static/js/popper.min.js?v=sjf9h9sx"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=sjf9h9sx"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/1.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/1.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -95,7 +95,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/2.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/2.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -104,7 +104,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/3.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/3.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -113,7 +113,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/4.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/4.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -122,7 +122,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/5.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/5.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -131,7 +131,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/6.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/6.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -140,7 +140,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/7.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/7.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -149,7 +149,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/8.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/8.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -158,7 +158,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/9.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/9.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -167,7 +167,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/10.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/10.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -176,7 +176,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/11.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/11.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -185,7 +185,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/12.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/12.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -194,7 +194,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/13.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/13.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -203,7 +203,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/14.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/14.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -212,7 +212,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/15.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/15.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -221,7 +221,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/16.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/16.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -230,7 +230,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/17.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/17.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -239,7 +239,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/18.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/18.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -248,7 +248,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/19.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/19.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -257,7 +257,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/20.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/20.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -266,7 +266,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/21.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/21.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -275,7 +275,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/22.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/22.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -284,7 +284,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/23.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/23.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -293,7 +293,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/24.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/24.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -302,7 +302,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/25.jpg?v=wdygd16n" alt>
+              <img src="../static/images/gallery/25.jpg?v=sjf9h9sx" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -320,7 +320,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -372,9 +372,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=wdygd16n"></script>
+  <script src="../static/js/main.js?v=sjf9h9sx"></script>
 
-  <script src="../static/js/main.js?v=wdygd16n"></script>
+  <script src="../static/js/main.js?v=sjf9h9sx"></script>
 </body>
 
 </html>
