--- a/services/index.html
+++ b/services/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
-  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
-  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
-  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=sjf9h9sx">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=sjf9h9sx">
+  <link rel="stylesheet" href="../static/styles/style.css?v=sjf9h9sx">
+  <script src="../static/js/jquery-3.7.0.min.js?v=sjf9h9sx"></script>
+  <script src="../static/js/popper.min.js?v=sjf9h9sx"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=sjf9h9sx"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
         <div class="col-md-6">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/service/1.jpg?v=wdygd16n" alt>
+              <img src="../static/images/service/1.jpg?v=sjf9h9sx" alt>
             </div>
 
             <div class="list-item-content">
@@ -95,7 +95,7 @@
         <div class="col-md-6">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/service/2.jpg?v=wdygd16n" alt>
+              <img src="../static/images/service/2.jpg?v=sjf9h9sx" alt>
             </div>
 
             <div class="list-item-content">
@@ -123,13 +123,13 @@
       </p>
       <div class="row gy-4 choose-partner">
         <div class="col-md-4 text-center">
-          <img src="../static/images/partner/1.jpg?v=wdygd16n" alt="dulux">
+          <img src="../static/images/partner/1.jpg?v=sjf9h9sx" alt="dulux">
         </div>
         <div class="col-md-4 text-center">
-          <img src="../static/images/partner/2.jpg?v=wdygd16n" alt="wattyl">
+          <img src="../static/images/partner/2.jpg?v=sjf9h9sx" alt="wattyl">
         </div>
         <div class="col-md-4 text-center">
-          <img src="../static/images/partner/3.jpg?v=wdygd16n" alt="haymes">
+          <img src="../static/images/partner/3.jpg?v=sjf9h9sx" alt="haymes">
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -195,7 +195,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=wdygd16n"></script>
+  <script src="../static/js/main.js?v=sjf9h9sx"></script>
 
 </body>
 
