--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
             <div class="thumb">
               <img src="./static/images/home/choose/1.jpg?v=sjf9h9sx" alt>
             </div>
+            <div class="text-center">
+              <h5>RESIDENTIAL PAINTING</h5>
+            </div>
           </div>
         </div>
 
@@ -163,12 +166,13 @@
             <div class="thumb">
               <img src="./static/images/home/choose/3.jpg?v=sjf9h9sx" alt>
             </div>
+            <div class="text-center">
+              <h5>COMMERCIAL && INDUSTRIAL PAINTING</h5>
+            </div>
           </div>
         </div>
       </div>
-      <div class="text-center">
-        <h5>RESIDENTIAL PAINTING && INDUSTRIAL PAINTING</h5>
-      </div>
+
       <div class="section-title text-center mt-5">
         <h1>Why Choose Us</h1>
         <p>Crazy About Colours only uses Premium paints</p>
